# haskell-lambda-calculus

./: CHANGELOG.md  lc.cabal
build-aux/: guix.scm
src/: ClassicToDeBruijn.lhs  LambdaCalculus.lhs  Main.lhs  Parser.lhs  Printer.hs  Printer.lhs  Scratch.lhs  Zipper.lhs
test/: EvaluatorSpec.hs  LambdaCalculusSpec.hs  ParserSpec.hs  PrinterSpec.hs  TypeSpec.hs  ZipperSpec.hs
