name: lc
synopsis:            Exploration of the lambda calculus
license:             CC0
license-file:        LICENSE
author:              Stephen Webber
maintainer:          Stephen Webber <montokapro@gmail.com>
category:            Math
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://wiki.haskell.org/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0

executable lc
  main-is:             Main.lhs
  other-modules:
      LambdaCalculus
      Parser
  build-depends:
      base >=4.12 && <4.13,
      text,
      megaparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

library
  exposed-modules:
      LambdaCalculus
      Parser
  build-depends:
      base >=4.12 && <4.13,
      text,
      megaparsec
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    build-depends:
        base >=4.12 && <4.13,
        text,
        megaparsec,
        lc,
        hspec,
        hspec-megaparsec
    other-modules:
        LambdaCalculusSpec
        ParserSpec
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover >= 2 && <3

    ghc-options: -Wall
    if impl(ghc >= 8.0)
        ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
    else
        build-depends: semigroups